	- resurrect rpmErrorSetCallback() and rpmErrorString().
	- use malloc'ed buffer for large queries.
	- fix: avoid FAT and other brain-dead file systems that have not inodes.
	- fix: hack around alpha mis-compilation signature problems.
	- rpmmodule.c(handleDbResult): return empty list when nothing matches.
	- (non-linux): move stubs.c to rpmio (#21132).
	- (python): bind initdb (#20988).

3.0.6 -> 4.0
	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
	- API: change dbi to pass by reference, not value.
	- cram all of db1, db_185, and db2 interfaces into rpmlib.
	- convert db1 -> db2 on-disk format using --rebuilddb.
	- add db3 to the pile, isolate all with incremental link and vectors.
	- prefer db3 as default.
	- permit db3 configuration using macros.
	- create dbi from template rather than passed args.
	- use hashed access for package headers.
	- db3: save join keys in endian neutral binary format.
	- treat legacy falloc.c as "special" db[01] index for package headers.
	- API: pass *SearchIndex() length of key (0 will use strlen(key)).
	- API: remove rpmdb{First,Next}RecNum routines.
	- add explcit "Provides: name = [epoch:]version-release" to headers.
	- fix: cpio.c: pre-, not post-, decrement the link count.
		(from Fabrice Bellet <Fabrice.Bellet@creatis.insa-lyon.fr>)
	- make db indices as lightweight as possible, with per-dbi config.
	- db1.c will never be needed, eliminate.
	- API: merge rebuilddb.c into rpmdb.c.
	- API: replace rpmdbUpdateRecord with rpmdbSetIteratorModified.
	- API: replace rpmdbFindByLabel with RPMDBI_LABEL iteration.
	- API: replace rpmdbGetRecord with iterators.
	- API: replace findMatches with iterators.
	- Filter DB_INCOMPLETE on db->sync, it's usually harmless.
	- Add per-transaction cache of resolved dependencies (aka Depends).
	- Do lazy dbi{Open,Close} throughout.
	- Attempt fine grained dbi cursors throughout.
	- fix: free iterator *after* loop, not during.